card - colors, sizes, alignment, general fixes

--- a/WEBPAGE/static/style-teacherTiles.css
+++ b/WEBPAGE/static/style-teacherTiles.css
@@ -4,47 +4,89 @@ body {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, 500px);
     gap: 15px;
     padding: 15px;
+    justify-content: start;
     box-sizing: border-box;
 }
 
+
 .card {
-    background-color: rgb(177, 177, 230);
+    width: 500px;
+    height: 120px;
     display: flex;
     align-items: center;
     gap: 15px;
-    height: 120px;
     padding: 20px;
     border-radius: 15px;
     color: white;
     transition: transform 0.3s ease;
     box-sizing: border-box;
+    justify-content: space-between;
+    position: relative;
 }
 
+
 .card:hover {
-    transform: scale(1.15);
+    transform: scale(1.075);
     transition: transform 1s;
 }
 
 .card-text {
+    flex: 1 1 0;
+    min-width: 0;
     display: flex;
     flex-direction: column;
+    overflow-wrap: break-word;
 }
 
 .card img {
     object-fit: cover;
-    width: 110px;
-    height: 110px;
+    width: 115px;
+    height: 115px;
     border-radius: 15px;
-    border: 2px solid Black;
+    margin-left: -20px;
 }
+
+.card p {
+    margin: 0;
+    font-size: 16px;
+}
+
+.card .lesson {
+    flex: 0 0 auto;
+    margin-left: auto;
+    justify-content: flex-end;
+    border-collapse: collapse;
+    margin: 0;
+    text-align: center;
+}
+
+.card .lesson table {
+    margin: 0;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+.card th {
+    border: 1px solid #333;
+    padding: 8px 12px;
+    background-color: #333;
+    color: white;
+}
+
+.card td {
+    border: 1px solid #333;
+    padding: 8px 12px;
+}
+
 
 .dropdown-checkbox {
     width: 150px;
     position: relative;
     display: inline-block;
+    z-index: 1000;
 }
 
 .dropdown-checkbox .dropdown-btn {
@@ -60,6 +102,7 @@ body {
     position: absolute;
     background: white;
     border: 1px solid #ccc;
+    z-index: 1001;
 }
 
 .dropdown-checkbox.active .dropdown-content {
